# Arreglos-Paginados

./: .gitignore  CMakeLists.txt  README.md  generator.cpp
src/: PagedArray.cpp  PagedArray.h  SortAlgorithms.cpp  SortAlgorithms.h  generator.cpp  sorter.cpp
